@@ -74,6 +74,13 @@ Version 8.13 30-Apr-2011
     opcodes that mean there is no starting character; this means that when new 
     ones are added and accidentally left out of pcre_study(), testing should 
     pick them up.
+    
+14. The -s option of pcretest has been documented for ages as being an old 
+    synonym of -m (show memory usage). I have changed it to mean "force study 
+    for every regex", that is, assume /S for every regex. This is similar to -i 
+    and -d etc. It's slightly incompatible, but I'm hoping nobody is still 
+    using it. It makes it easier to run collection of tests with study enabled, 
+    and thereby test pcre_study() more easily.  
 
 
 Version 8.12 15-Jan-2011
